Don't set background color
 * Some gnome theme make change gnome-shell color.
 * This commit change background color to transparent.

Signed-off-by: Jeonghun Yang <didwjdgns820@gmail.com>

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -6,5 +6,5 @@
     font-family: Helvetica;
     color: white;
     text-shadow: black 0px 4px 3px 0px;
-    background-color: rgba(10,10,10,0.7);
+    background-color: transparent;
 }
